--- a/src/Post.css
+++ b/src/Post.css
@@ -16,3 +16,13 @@
   border-top: 1px solid lightgrey;
   border-bottom: 1px solid lightgrey;
 }
+
+.post_text {
+  font-weight: normal;
+  padding: 20px;
+  border-bottom: 1px solid lightgrey;
+}
+
+.post_comment {
+  padding: 20px;
+}
