feat: add header

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,21 @@
 .app_posts {
   padding: 20px;
 }
+
+.app_header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: #fff;
+  border-bottom: 1px solid lightgrey;
+  object-fit: contain;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 20px;
+}
+
+.app_headerImage {
+  object-fit: contain;
+  width: 300px;
+}
